Revision history for Perl module Lingua::FR::Numbers::Ordinate

0.05
	Use Test::DescribeMe and Test::Needs to simplify tests
	Added the gender parameter
	Repacled the regex with Scalar::Util::looks_like_number

0.04	Sat Oct 23 09:58:05 EDT 2021
	Fix 19th
	Use i18n characters

0.03	Mon Aug  3 19:48:48 EDT 2020
	Completely re-wrote

0.02	Sun Aug  2 19:56:15 EDT 2020
	Include version number

0.01	Thu Jan  2 22:03:35 EST 2020
	First Draft