@@ -4,6 +4,7 @@ Revision history for Perl module Lingua::FR::Numbers::Ordinate
 	Use Test::DescribeMe and Test::Needs to simplify tests
 	Added the gender parameter
 	Repacled the regex with Scalar::Util::looks_like_number
+	Added cardinal
 
 0.04	Sat Oct 23 09:58:05 EDT 2021
 	Fix 19th
